--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
             aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" aria-current="page"
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate" aria-current="page"
                   href="#home">Utama</a></li>
-              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#tentang">Tentang</a></li>
-              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#project">Project</a></li>
-              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link"
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
+                  href="#tentang">Tentang</a></li>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
+                  href="#project">Project</a></li>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate"
                   href="#archievments">Archievments</a>
               </li>
-              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#contact">Kontak </a>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link btn-animate" href="#contact">Kontak
+                </a>
               </li>
             </ul>
           </div>
