--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="row justify-content-center">
               <div class="col-md-4 mb-4" data-aos="fade-right" data-aos-delay="900">
                 <div class="card h-100 shadow card-span btn-animate"><img class="card-img-top"
-                    src="assets/img/web/jme.png" alt="news" />
+                    src="assets/img/web/jme.jpg" alt="news" />
                   <div class="card-body">
                     <h5 class="fs-lg-1 my-3">Website Jurnalis Murakata Ekstensia PERHIPTANI Kab. Hulu Sungai Tengah
                     </h5>
@@ -197,7 +197,7 @@
               <div class="col-md-4 mb-4" data-aos="fade-left" data-aos-delay="900">
                 <a href="https://admisiprofesi.ulm.ac.id" class="text-decoration-none" target="_blank">
                   <div class=" card h-100 shadow card-span btn-animate">
-                    <img class="card-img-top" src="assets/img/web/admisi.png" alt="news" />
+                    <img class="card-img-top" src="assets/img/web/admisi.jpg" alt="news" />
                     <div class="card-body">
                       <h5 class="fs-lg-1 my-3">Admisi Profesi Universitas Lambung Mangkurat</h5>
                     </div>
