fix video player

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
                     <div class="row px-lg-5 mb-2">
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate mb-3">
-                          <div class="ratio ratio-16x9" id="ppp">
+                          <div class="ratio ratio-16x9">
                             <!-- <iframe src="https://www.youtube.com/embed/A1J8Sagl64s" title="YouTube video player"
                               frameborder="0"
                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                               allowfullscreen>
                             </iframe> -->
-                            <img src="assets/img/web/admisi.jpg" alt="">
-                            <button style="background: none;" class="play"
+                            <img src="assets/img/thumb/pln-kalselteng.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
                               data-url='https://www.youtube.com/embed/A1J8Sagl64s'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
                             </button>
@@ -259,8 +259,8 @@
                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                               allowfullscreen>
                             </iframe> -->
-                            <img src="assets/img/web/admisi.jpg" alt="">
-                            <button style="background: none;" class="play"
+                            <img src="assets/img/thumb/pln-kotabaru.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
                               data-url='https://www.youtube.com/embed/vFUURjsY17E'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
                             </button>
@@ -279,13 +279,8 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <!-- <iframe src="https://drive.google.com/file/d/1Y-pdVIoiXGjyh_QPHJfa4fy3Zpx7HMuT/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe> -->
-                            <img src="assets/img/web/admisi.jpg" alt="">
-                            <button style="background: none;" class="play"
+                            <img src="assets/img/thumb/pln-batulicin.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1Y-pdVIoiXGjyh_QPHJfa4fy3Zpx7HMuT/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
                             </button>
@@ -300,13 +295,8 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <!-- <iframe src="https://drive.google.com/file/d/1nM3rWRcitzPLf5nwrW_mBSTERwfw26Sk/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe> -->
-                            <img src="assets/img/web/admisi.jpg" alt="">
-                            <button style="background: none;" class="play"
+                            <img src="assets/img/thumb/pln-satui.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1nM3rWRcitzPLf5nwrW_mBSTERwfw26Sk/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
                             </button>
@@ -326,11 +316,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://drive.google.com/file/d/1wsvajcV4ZkWy9PqGr4Q8Y1Tcy2B5p8fy/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe>
+                            <img src="assets/img/thumb/pancasila.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://drive.google.com/file/d/1wsvajcV4ZkWy9PqGr4Q8Y1Tcy2B5p8fy/preview'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PUSPEKA
@@ -342,11 +332,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://drive.google.com/file/d/1Qt9BKsMDy51eUlM39hc0MLXW-lCvj7vf/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe>
+                            <img src="assets/img/thumb/pln-cfh.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://drive.google.com/file/d/1Qt9BKsMDy51eUlM39hc0MLXW-lCvj7vf/preview'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PLN UIW
@@ -363,11 +353,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://drive.google.com/file/d/17TOkNKxANRYUeOdlg4cYnmURP9_JF0NA/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe>
+                            <img src="assets/img/thumb/covid.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://drive.google.com/file/d/17TOkNKxANRYUeOdlg4cYnmURP9_JF0NA/preview'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Universitas Gadjah
@@ -570,10 +560,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/fOeQovaJ84o" title="YouTube video player"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen></iframe>
+                            <img src="assets/img/thumb/stat.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://www.youtube.com/embed/fOeQovaJ84o'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill   me-1"></i>Statistika
@@ -588,10 +579,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/Tz0iNGdniEY" title="YouTube video player"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen></iframe>
+                            <img src="assets/img/thumb/vaksin.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://www.youtube.com/embed/Tz0iNGdniEY'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Statistika FMIPA
@@ -609,11 +601,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://drive.google.com/file/d/1xSpIzwroexQVGamdwC3cFAKWBLhJfI2H/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe>
+                            <img src="assets/img/thumb/qris.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://drive.google.com/file/d/1xSpIzwroexQVGamdwC3cFAKWBLhJfI2H/preview'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Bank Indonesia
@@ -626,11 +618,11 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <iframe src="https://drive.google.com/file/d/1RmNaENIdfFgU8lAvT1bK3KYn8qJGJsEY/preview"
-                              frameborder="0"
-                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                              allowfullscreen>
-                            </iframe>
+                            <img src="assets/img/thumb/sensus.jpg" alt="">
+                            <button style="background: none; border: none;" class="play"
+                              data-url='https://drive.google.com/file/d/1RmNaENIdfFgU8lAvT1bK3KYn8qJGJsEY/preview'><i
+                                class="bi bi-play-fill text-white fs-7"></i>
+                            </button>
                           </div>
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>BPS Kota
