--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>Portfolio - Muhammad Ryan Afrizal</title>
+  <title>Muhammad Ryan Afrizal</title>
 
 
   <!-- ===============================================-->
@@ -56,6 +56,7 @@
   <!--    Main Content-->
   <!-- ===============================================-->
   <main class="main" id="top">
+    <div class="loader"><span>Tunggu Sebentar</span></div>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
       <div class="container"><a class="navbar-brand d-flex align-items-center fw-semi-bold fs-3">
           <!-- <img class="me-3" src="assets/img/gallery/logo.png" alt="" /></a> -->
@@ -386,8 +387,9 @@
               <div class="row">
                 <div class="col-lg-12 d-flex justify-content-center">
                   <ul id="portfolio-flters">
-                    <li data-filter="*" class="filter-active">Semua</li>
-                    <li data-filter=".filter-poster">Ilustrasi</li>
+                    <li data-filter="*" class="filter-active d-none d-lg-inline-block">Semua</li>
+                    <li data-filter=".filter-poster" class="d-none d-lg-inline-block">Ilustrasi</li>
+                    <li data-filter=".filter-poster" class="filter-active d-lg-none">Ilustrasi</li>
                     <li data-filter=".filter-product">Produk</li>
                     <li data-filter=".filter-artikel">Artikel</li>
                     <li data-filter=".filter-leaflet">Lain-lain</li>
@@ -1278,6 +1280,15 @@
 
 
   <script>
+    $(document).ready(function () {
+
+      $(window).load(function () {
+        $(".loader").fadeOut(700);
+      });
+
+    });
+
+
     $(".galeri-carousel").owlCarousel({
       autoplay: false,
       dots: true,
