--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             <p class="mb-6 fs--1 fs-lg-1 lh-2">Web Developer, Motion Graphics Designer, Graphics Designer, Video Editor,
               Data
               Science & Machine Learning Enthusiast.</p>
-            <a class=" btn btn-lg btn-primary hover-top btn-glow" href="#tentang">Tentang Saya
+            <a class=" btn btn-lg btn-primary hover-top btn-glow" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">Curriculum Vitae
               <svg class="bi bi-arrow-right-short ms-2" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                 fill="currentColor" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
@@ -127,8 +128,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12 mx-auto align-items-center text-center">
-            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="tentang">Tentang Saya</h5>
-            <p>Saya <span class="text-primary fw-semi-bold">Muhammad Ryan
+            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="tentang" data-aos="zoom-in" data-aos-delay="500">
+              Tentang Saya</h5>
+            <p data-aos="fade-up" data-aos-delay="1000">Saya <span class="text-primary fw-semi-bold">Muhammad Ryan
                 Afrizal</span>, fresh
               graduete <span class="text-primary fw-semi-bold">S-1 Ilmu Komputer</span> dari <span
                 class="text-primary fw-semi-bold">Universitas Lambung Mangkurat</span>. Saya
@@ -140,7 +142,7 @@
         </div>
         <div class="row mt-5 justify-content-center">
           <div class="col-lg-9">
-            <div class="row">
+            <div class="row" data-aos="fade-up" data-aos-delay="1500">
               <div class="col-md-3 text-center zoom service mb-4">
                 <i class="bi bi-display fs-5"></i>
                 <p class="fs-lg-0 fw-light ">Web Developer
@@ -187,15 +189,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center mb-4">
-            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-3 pt-5" id="project">Project</h5>
-            <h4 class="fw-light mb-3 fw-semi-bold">Website</h4>
+            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-3 pt-5" id="project" data-aos="zoom-in" data-aos-delay="500">
+              Project</h5>
+            <h4 class="fw-light mb-3 fw-semi-bold" data-aos="zoom-in" data-aos-delay="1000">Website</h4>
             <!-- <p class="mb-5">Executive Trade International is an University Application Centre, guiding Bangladeshi
               students to Australian, British, Canadian and Irish universities!</p> -->
           </div>
         </div>
         <div class="row flex-center h-100 mb-5">
           <div class="col-xl-9">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="2000">
               <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow card-span btn-animate"><img class="card-img-top"
                     src="assets/img/web/jme.jpg" alt="news" />
@@ -221,7 +224,7 @@
 
         <div class="row mt-7 pt-7">
           <div class="col-lg-7 mx-auto text-center mb-4">
-            <h4 class="fw-light mb-3 fw-semi-bold">Motion Graphics</h4>
+            <h4 class="fw-light mb-3 fw-semi-bold" data-aos="zoom-in" data-aos-delay="500">Motion Graphics</h4>
           </div>
         </div>
         <div class="row flex-center h-100 mb-5">
@@ -230,7 +233,7 @@
               <div class="owl-stage-outer">
                 <div class="owl-stage">
                   <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
-                    <div class="row px-lg-5 mb-2">
+                    <div class="row px-lg-5 mb-2" data-aos="fade-up" data-aos-delay="1500">
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate mb-3">
                           <div class="ratio ratio-16x9">
@@ -376,7 +379,7 @@
         </div>
         <div class="row mt-7 pt-7">
           <div class="col-lg-7 mx-auto text-center mb-4">
-            <h4 class="fw-light mb-3 mt-5 fw-semi-bold">Graphics Design</h4>
+            <h4 class="fw-light mb-3 mt-5 fw-semi-bold" data-aos="zoom-in" data-aos-delay="500">Graphics Design</h4>
             <!-- <p class="mb-5">Executive Trade International is an University Application Centre, guiding Bangladeshi
               students to Australian, British, Canadian and Irish universities!</p> -->
           </div>
@@ -385,11 +388,12 @@
           <div class="col-xl-10 portfolio" id="portfolio">
             <div class="container">
               <div class="row">
-                <div class="col-lg-12 d-flex justify-content-center">
+                <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="1000">
                   <ul id="portfolio-flters">
                     <li data-filter="*" class="filter-active d-none d-lg-inline-block">Semua</li>
                     <li data-filter=".filter-poster" class="d-none d-lg-inline-block">Ilustrasi</li>
-                    <li data-filter=".filter-poster" class="filter-active d-lg-none">Ilustrasi</li>
+                    <li data-filter=".filter-poster" class="filter-active d-lg-none" id="ilustrasi-active">Ilustrasi
+                    </li>
                     <li data-filter=".filter-product">Produk</li>
                     <li data-filter=".filter-artikel">Artikel</li>
                     <li data-filter=".filter-leaflet">Lain-lain</li>
@@ -397,7 +401,7 @@
                 </div>
               </div>
 
-              <div class="row portfolio-container">
+              <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="2000">
                 <!-- ========================== -->
                 <!-- POSTER -->
                 <!-- ========================== -->
@@ -547,7 +551,7 @@
 
         <div class="row mt-7 pt-7">
           <div class="col-lg-7 mx-auto text-center mb-4">
-            <h4 class="fw-light mb-3 fw-semi-bold">Video Editing</h4>
+            <h4 class="fw-light mb-3 fw-semi-bold" data-aos="zoom-in" data-aos-delay="500">Video Editing</h4>
             <!-- <p class="mb-5">Executive Trade International is an University Application Centre, guiding Bangladeshi
                 students to Australian, British, Canadian and Irish universities!</p> -->
           </div>
@@ -558,7 +562,7 @@
               <div class="owl-stage-outer">
                 <div class="owl-stage">
                   <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
-                    <div class="row px-lg-5 mb-2">
+                    <div class="row px-lg-5 mb-2" data-aos="fade-up" data-aos-delay="1500">
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
@@ -660,7 +664,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center my-5">
-            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="archievments">Archievments</h5>
+            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="archievments" data-aos="zoom-in" data-aos-delay="500">
+              Archievments</h5>
           </div>
         </div>
         <div class="row portfolio flex-center h-100">
@@ -669,7 +674,7 @@
               <div class="owl-stage-outer">
                 <div class="owl-stage">
                   <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
-                    <div class="row px-lg-5 mb-2">
+                    <div class="row px-lg-5 mb-2" data-aos="fade-up" data-aos-delay="1000">
                       <div class="col-md-4 mb-4">
                         <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
                           <img src="assets/img/arc/ml.png" class="img-fluid rounded-border" alt="">
@@ -1128,12 +1133,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center my-5">
-            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="contact">Kontak</h5>
+            <h5 class="fw-light fs-3 fs-lg-5 lh-sm mb-4 pt-5" id="contact" data-aos="zoom-in" data-aos-delay="500">
+              Kontak</h5>
           </div>
         </div>
         <div class="row flex-center h-100">
           <div class="col-xl-10">
-            <div class="row h-100 justify-content-center">
+            <div class="row h-100 justify-content-center" data-aos="fade-up" data-aos-delay="1500">
               <div class="col-md-4 mb-4">
                 <a href="https://www.instagram.com/mryanafz" target="_blank">
                   <div class="card h-100 shadow card-span zoom">
@@ -1231,6 +1237,29 @@
 
     </section>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title fs-0" id="exampleModalLabel">Curriculum Vitae</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            Coming Soon <i class="bi bi-emoji-smile fs-1"></i>
+          </div>
+          <div class=" modal-footer">
+            <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button> -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button type="button" class="btn btn-primary p-1 btn-animate" id="btn-back-to-top">
+      <i class="bi bi-arrow-up"></i>
+    </button>
+
     <!-- <ul class="caption-style-1">
           <li>
             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/103389/chaps_1x.jpg" alt="">
@@ -1286,6 +1315,50 @@
         $(".loader").fadeOut(700);
       });
 
+      width = $(document).width()
+      console.log(width)
+      if (width < 990) {
+        console.log('asdsa')
+        setTimeout(function () {
+          document.getElementById('ilustrasi-active').click();
+          //your code to be executed after 1 second
+        }, 3000);
+      }
+
+
+
+
+
+
+
+      //Get the button
+      let mybutton = document.getElementById("btn-back-to-top");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+      // When the user clicks on the button, scroll to the top of the document
+      mybutton.addEventListener("click", backToTop);
+
+      function backToTop() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+
+
+
     });
 
 
@@ -1309,6 +1382,8 @@
         }
       }
     })
+
+
 
     $(document).on('click', '.play', function (e) {
       e.preventDefault();
